--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,13 @@ layout: default
 
 <article class="post">
   <h1>{{ page.title }}</h1>
-
+  <hr />
+{% assign author = site.data.authors[page.author] %}
+{% if author %}
+<span>
+**Author** : <a href="{{ author.profile }}" target="_blank">@{{ author.name }}</a>
+</span>
+{% endif %}
   <div class="entry">
     {{ content }}
   </div>
