--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
 {% assign author = site.data.authors[page.author] %}
 {% if author %}
 <span>
-**Author** : <a href="{{ author.profile }}" target="_blank">@{{ author.name }}</a>
+  <b>Author</b> : <a href="{{ author.profile }}" target="_blank">@{{ author.name }}</a>
 </span>
 {% endif %}
   <div class="entry">
