--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <a href="http://github.com/{{ site.footerLinks.github }}/">Projects</a>
+            <a href="http://github.com/{{ site.footer-links.github }}/">Projects</a>
           </nav>
         </header>
       </div>
