--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,10 +11,27 @@ layout: default
   <b>Author</b> : <a href="{{ author.profile }}" target="_blank">@{{ author.name }}</a>
 </span>
 {% endif %}
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- in-article -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-3201220427379470"
+     data-ad-slot="4493641341"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <div class="entry">
     {{ content }}
   </div>
-
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- in-article -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-3201220427379470"
+     data-ad-slot="4493641341"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <div class="date">
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
@@ -36,5 +53,13 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript> 
-  
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- in-article -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-3201220427379470"
+     data-ad-slot="4493641341"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>  
 </article>
