--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,25 +14,27 @@ layout: default
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- in-article -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
+     style="display:block; text-align:center;"
+     data-ad-format="fluid"
+     data-ad-layout="in-article"
      data-ad-client="ca-pub-3201220427379470"
-     data-ad-slot="4493641341"></ins>
+     data-ad-slot="2921542940"></ins>
 <script>
-(adsbygoogle = window.adsbygoogle || []).push({});
+     (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
   <div class="entry">
     {{ content }}
   </div>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- in-article -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
+     style="display:block; text-align:center;"
+     data-ad-format="fluid"
+     data-ad-layout="in-article"
      data-ad-client="ca-pub-3201220427379470"
-     data-ad-slot="4493641341"></ins>
+     data-ad-slot="2921542940"></ins>
 <script>
-(adsbygoogle = window.adsbygoogle || []).push({});
+     (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-  <div class="date">
+ <div class="date">
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
 <div id="disqus_thread"></div>
@@ -53,13 +55,13 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript> 
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- in-article -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
+     style="display:block; text-align:center;"
+     data-ad-format="fluid"
+     data-ad-layout="in-article"
      data-ad-client="ca-pub-3201220427379470"
-     data-ad-slot="4493641341"></ins>
+     data-ad-slot="2921542940"></ins>
 <script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>  
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </article>
