--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,7 +32,7 @@ layout: default
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
   <br />
-  <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div> 
+  <div class="fb-like" data-href="{{site.url}}{{page.url}}" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div> 
   <br />
 <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 <a href="https://twitter.com/RAVINDERPAYAL?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @RAVINDERPAYAL</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
