--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
 {% endif %}
   <br />
   <div class="fb-like" data-href="{{site.url}}{{page.url}}" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div> 
-<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+<br/><a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 <a href="https://twitter.com/RAVINDERPAYAL?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @RAVINDERPAYAL</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
   <g:plusone></g:plusone>
