--- a/style.scss
+++ b/style.scss
@@ -285,5 +285,5 @@ footer {
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
-@import "monokai" // "highlights";
+@import "monokai"; // "highlights";
 @import "svg-icons";
