--- a/_sass/_monokai.scss
+++ b/_sass/_monokai.scss
@@ -1,3 +1,9 @@
+.highlight {
+  overflow: scroll;
+}
+code {
+  font-family:'Bitstream Vera Sans Mono','Courier', monospace;
+}
 .highlight pre { background-color: #272822; }
 .highlight .hll { background-color: #272822; }
 .highlight .c { color: #75715e } /* Comment */
