--- a/_sass/_monokai.scss
+++ b/_sass/_monokai.scss
@@ -1,10 +1,7 @@
-.highlight {
-  overflow: scroll;
-}
 code {
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
 }
-.highlight pre { background-color: #272822; }
+.highlight pre { background-color: #272822;  overflow: scroll;}
 .highlight .hll { background-color: #272822; }
 .highlight .c { color: #75715e } /* Comment */
 .highlight .err { color: #960050; background-color: #1e0010 } /* Error */
