--- a/_sass/_monokai.scss
+++ b/_sass/_monokai.scss
@@ -1,7 +1,10 @@
 code {
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
 }
-.highlight pre { background-color: #272822;  overflow: scroll; padding: 10px; margin: 10px;}
+.highlight {
+   padding: 5px; margin: 5px;
+}
+.highlight pre { background-color: #272822;  overflow: auto;}
 .highlight .hll { background-color: #272822; }
 .highlight .c { color: #75715e } /* Comment */
 .highlight .err { color: #960050; background-color: #1e0010 } /* Error */
